--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,21 @@
   "compilerOptions": {
     "target": "ES2019",
     "module": "ESNext",
+    "moduleResolution": "node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "outDir": "dist",
+    "declaration": true,
+    "declarationMap": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
       "vitest": ["node_modules/vitest/dist/index.d.ts"]
     }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
